Doing the refactors - WIP

--- a/ecommerceAppium/test-output/emailable-report.html
+++ b/ecommerceAppium/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Department name</th></tr>
-<tr><td><a href="#t0">First Try - Run all methods from one class</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">65.805</td><td></td><td></td></tr>
+<tr><td><a href="#t0">First Try - Run all methods from one class</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">68.672</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Department name</th></tr></tbody><tbody id="t0"><tr><th colspan="4">First Try - Run all methods from one class &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">ecommerceAppium.AppiumLoginScreenTest</td><td><a href="#m0">AttemptWithoutFillingNameFieldTest</a></td><td rowspan="1">1722434015279</td><td rowspan="1">8831</td></tr><tr class="passedeven"><td><a href="#m1">LoginSuccessfullyTest</a></td><td rowspan="1">1722434039389</td><td rowspan="1">14522</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Department name</th></tr></tbody><tbody id="t0"><tr><th colspan="4">First Try - Run all methods from one class &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">ecommerceAppium.AppiumProductScreenTest</td><td><a href="#m0">ProductsAddingSuccessfullyTest</a></td><td rowspan="1">1722523078023</td><td rowspan="1">35969</td></tr></tbody>
 </table>
-<h2>First Try - Run all methods from one class</h2><h3 id="m0">ecommerceAppium.AppiumLoginScreenTest#AttemptWithoutFillingNameFieldTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Argentina</td><td>female</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">ecommerceAppium.AppiumLoginScreenTest#LoginSuccessfullyTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Argentina</td><td>Branca de Neve</td><td>female</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>First Try - Run all methods from one class</h2><h3 id="m0">ecommerceAppium.AppiumProductScreenTest#ProductsAddingSuccessfullyTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>Argentina</td><td>Branca de Neve</td><td>female</td><td>PG 3</td><td>Jordan 6 Rings</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
